--- a/style.css
+++ b/style.css
@@ -1,60 +1,64 @@
-body{
-    background-color: #aaa;
-    /* align-items: center;
-    text-align: center; */
+body {
+    font-family: Arial;
+    max-width: 900px;
+    margin: auto;
 }
 #nome{
-    font-family: 'Times New Roman', Times, serif;
-    
-    
-}
-.name{
-    position: absolute;
+    position: relative;
     text-align: center;
+    align-content: center;
+    padding: 30px;
     left: 400px;
-    width: 250px;
+    width: 350px;
+    margin-left: -120px;
 }
-#desc{
-    font-family: Arial, Helvetica, sans-serif;
-
-}
-#hab{
-    font-size: 2em;
-    margin: auto;
-    margin: 20px 0px;
-}
-.hab1{
-    font-size: 1.5em;
-    list-style-type: none;
-    margin: auto;
-}
-.inline{
-    position: absolute;
-    top: 100px;
-    align-items: center;
-}
-#imagem{
-    border-radius: 20%;
-    
-    left: 10px;
+img, p{
+    margin: 0px;
+    padding: 0px;
+    list-style: none;
+    font-size: 1.1em;
+    margin-left: 20px;
 }
 p {
-    width: 400px;
-    max-width: 80%;
-    margin: auto;
-    margin-top: 30px;
-    left: 100px;
+    margin-left: 30px;
+    max-width: 400px;
+    /* min-width: 300px; */
+    text-align: justify;
 }
-.lado {
-    position: absolute;
+
+.imgp {
+    display: inline-block;    
 }
-.hab-foot{
-    top: 600px;
-    position: absolute;
-    left: 400px;
+#hab {
+    padding: 30px;
 }
-.desc-sub{
-    left: 350px;
-    position: absolute;
-    margin-top: -20px;
+ul li{
+    padding: 0px 0px 2px 20px;
+    list-style-position: inside;
+}
+a {
+    text-decoration: none;
+}
+
+.blogrec {
+    margin-bottom: 50px;
+    padding: 30px;
+}
+.links a {
+    margin-left: 40px;
+    font-size: 15px;
+    padding: 14px 25px;
+    background-color: rgb(81, 105, 211);
+    color: white;
+    border-radius: 10%;
+}
+
+.links {
+    margin-bottom: 50px;
+}
+
+
+
+.links a:hover{
+    color: grey;
 }
